tests/exceptions/ill-typed/ambiguous-throw-type-2.stella
language core;

extend with #exceptions, #exception-type-declaration, #lists;

exception type = Nat

fn main(n : Nat) -> Bool {
  return List::isempty(throw(0))
}